--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,15 +1,5 @@
 Vagrant.configure("2") do |config|
-  config.vm.define "vm1" do |vm1|
-    vm1.vm.box = "centos/7"
-    vm1.vm.hostname = "vm1"
-    vm1.vm.network "private_network", ip:"192.168.100.100"
-  end
-  config.vm.define "vm2" do |vm2|
-    vm2.vm.box = "centos/7"
-    vm2.vm.hostname = "vm2"
-    vm2.vm.network "private_network", ip:"192.168.100.101"
-  end
-  config.vm.provision "ansible" do |ansible|
-    ansible.playbook = "playbook.yml"
-  end
+  # config.vm.box = "generic/rhel7"
+  config.vm.box = "centos/7"
+  config.vm.hostname = "rhcsa-test"
 end
